--- a/contact-me.html
+++ b/contact-me.html
@@ -30,7 +30,7 @@
     </form>
     <br>
     <br>
-<a href="/home/fortebakken/VSCode/Web Development/HTML_personal site/index.html">Back to previous page</a>
+<INPUT TYPE="button" VALUE="Back" onClick="history.go(-1);">
 </body>
 
 </html>
