--- a/skills.html
+++ b/skills.html
@@ -49,8 +49,7 @@
     <br>
     <hr>
     <br>
-<a href="/home/fortebakken/VSCode/Web Development/HTML_personal site/index.html">Back to previous page</a>
-
+<INPUT TYPE="button" VALUE="Back" onClick="history.go(-1);">
 </body>
 
 </html>
