--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <!--<p/> is for paragraph-->
                 <h3><strong>PROFESSIONAL SUMMARY</strong></h3>
                 <p>Determined logistics data analyst knowledgeable of both practical and big-picture supply management
-                    practices.<br>Self-motivated supply chain management expert excited to thrive in a fast-paces
+                    practices.<br>Self-motivated supply chain management expert excited to thrive in a fast-paced
                     environment.<br>Skilled in aspects of data analytics, including mining, generation, and
                     visualization.<br>
-                    My focus is on maintaining the SAP B1 Item Master data base. I am also assigned special projects
+                    My focus is on maintaining the SAP BusinessOne Item Master data base. I am also assigned special projects
                     which involve
                     extracting and visualizing big data.</p>
             </td>
@@ -41,11 +41,11 @@
 
     <!--&nbsp; to add one whitespace or &ensp; for two whitespaces and &emsp; for four-->
     <ul>
-        <li>Cleansed, improved, and established consistency loading item master data in SAP Business One system.</li>
-        <li>Analyze and prepare big data files from manufacturers for import utilizing Microsoft Power Query as and ETL
-            tool to update SAP Business One item master data.</li>
-        <li>Utilized advanced Excel formulas to interpret manufacturers item files to identify and input descriptions
-            into SAP Business One item master.</li>
+        <li>Cleanse, improve, and establish consistency loading item master data in SAP BusinessOne system.</li>
+        <li>Analyze and prepare big data files from manufacturers for import utilizing Microsoft Power Query as an ETL
+            tool to update SAP BusinessOne item master data.</li>
+        <li>Utilize advanced Excel formulas to interpret manufacturers item files to identify and input descriptions
+            into SAP BusinessOne item master.</li>
     </ul>
     <h4><a href="https://www.justlogisticsgroupinc.com">Just Logistics Group Inc</a> - Contractor/Consultant
         (Remote)</h4>
